--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,7 +1,5 @@
 .modal {
   position: relative;
-  max-width: 90vw;
-  max-height: 90vh;
   border-radius: 8px;
   padding: 20px;
   outline: none;
@@ -12,8 +10,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
 }
 
 .overlay {
@@ -31,9 +27,11 @@
 }
 
 .modalImage {
-  max-width: 90%;
-  max-height: 90%;
-  object-fit: fill;
+  width: 100vw;
+  height: 100vh;
+  max-width: 1000px;
+  max-height: 800px;
+  object-fit: cover;
   border-radius: 8px;
   cursor: zoom-out;
 }
