--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -29,9 +29,23 @@
 .modalImage {
   width: 100vw;
   height: 100vh;
-  max-width: 1000px;
-  max-height: 800px;
+  max-width: 300px;
+  max-height: 400px;
   object-fit: cover;
   border-radius: 8px;
   cursor: zoom-out;
+}
+
+@media screen and (min-width: 768px) {
+  .modalImage {
+    max-width: 700px;
+    max-height: 500px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .modalImage {
+    max-width: 1000px;
+    max-height: 800px;
+  }
 }
